# src/modules/auth/social.controller.ts
@@ -1,10 +1,14 @@
 import { Request, Response } from 'express';
 import * as socialService from './social.service';
-import { respondSuccess } from '../../core/utils/response.util'
 
 export async function postSocialAuth(req: Request, res: Response) {
   const providerName = req.params.provider;
   const { code, state } = req.body;
   const data = await socialService.socialLogin(providerName, code, state);
-  respondSuccess(res, 200, null, data);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "소셜 로그인 성공",
+    data: data,
+  });
 }
