# src/modules/media/media.controller.ts
@@ -1,13 +1,17 @@
 import { Request, Response } from 'express';
 import * as mediaService from './media.service';
-import { respondSuccess } from '../../core/utils/response.util'
 import { AppError } from '../../core/errors/AppError';
 
 export const getAllMedia = async (req: Request, res: Response) => {
   const weddingId = Number(req.params.weddingId);
   const mediaArray = await mediaService.getAllMedia(weddingId);
 
-  return respondSuccess(res, 200, '', mediaArray);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "미디어 목록 조회 성공",
+    data: mediaArray,
+  });
 }
 
 export const postMedia = async (req: Request, res: Response) => {
@@ -21,10 +25,15 @@ export const postMedia = async (req: Request, res: Response) => {
 
   const media = await mediaService.uploadMedia(weddingId, metadata, file);
 
-  return respondSuccess(res, 200, '업로드 성공', media);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: '미디어 업로드 성공',
+    data: media,
+  });
 }
 
-export const replaceMedia = async (req: Request, res: Response) => {
+export const croppedMedia = async (req: Request, res: Response) => {
   const weddingId = Number(req.params.weddingId);
   const mediaId = Number(req.params.mediaId);
   // const metadata = JSON.parse(req.body);
@@ -34,15 +43,25 @@ export const replaceMedia = async (req: Request, res: Response) => {
   if (!file)
     throw new AppError(400, '파일이 없습니다.');
 
-  const result = await mediaService.replaceMedia(weddingId, mediaId, file);
+  const result = await mediaService.croppedMedia(weddingId, mediaId, file);
 
-  return respondSuccess(res, 200, '업로드 성공', result);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: '미디어 수정 성공',
+    data: result,
+  });
 }
 
 export const reorderMedia = async (req: Request, res: Response) => {
   const weddingId = Number(req.params.weddingId);
   await mediaService.reorderMedia(weddingId, req.body.media);
-  return respondSuccess(res, 200, '수정 성공', );
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: '순서 변경 완료',
+    data: null,
+  });
 }
 
 export const deleteMedia = async (req: Request, res: Response) => {
@@ -51,5 +70,24 @@ export const deleteMedia = async (req: Request, res: Response) => {
 
   await mediaService.deleteMedia(weddingId, mediaId);
 
-  return respondSuccess(res, 200, '삭제 완료', );
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: '삭제 완료',
+    data: null,
+  });
+}
+
+export const deleteByTypeMedia = async (req: Request, res: Response) => {
+  const weddingId = Number(req.params.weddingId);
+  const imageType = req.body.imageType;
+
+  await mediaService.deleteByTypeMedia(weddingId, imageType);
+
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: '이미지 타입 전체 삭제 완료',
+    data: null,
+  });
 }
