# src/modules/wedd/wedd.controller.ts
@@ -1,6 +1,5 @@
 import { Request, Response } from 'express';
 import * as weddService from './wedd.service';
-import { respondSuccess } from '../../core/utils/response.util'
 
 /**
  * 사용자의 wedd 전체 조회
@@ -8,7 +7,12 @@ import { respondSuccess } from '../../core/utils/response.util'
 export const getAllWedds = async (req: Request, res: Response) => {
   const { userId } = req.user;
   const wedds = await weddService.getAllWedds(userId);
-  respondSuccess(res, 200, null, wedds);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "청첩장 목록 조회 성공",
+    data: wedds,
+  });
 }
 
 /**
@@ -17,7 +21,12 @@ export const getAllWedds = async (req: Request, res: Response) => {
 export const getWeddById = async (req: Request, res: Response) => {
   const weddingId = Number(req.params.weddingId);
   const wedd = await weddService.getWeddById(weddingId);
-  respondSuccess(res, 200, null, wedd);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "청첩장 조회 성공",
+    data: wedd,
+  });
 };
 
 /**
@@ -26,7 +35,12 @@ export const getWeddById = async (req: Request, res: Response) => {
 export const getWeddById2= async (req: Request, res: Response) => {
   const weddingId = Number(req.params.weddingId);
   const wedd = await weddService.getWeddById2(weddingId);
-  respondSuccess(res, 200, null, wedd);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "청첩장 조회 성공",
+    data: wedd,
+  });
 };
 
 /**
@@ -35,7 +49,12 @@ export const getWeddById2= async (req: Request, res: Response) => {
 export const createWedd = async (req: Request, res: Response) => {
   const { userId } = req.user;
   const wedd = await weddService.createWedd(userId);
-  respondSuccess(res, 200, null, wedd);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "청첩장 생성 성공",
+    data: wedd,
+  });
 };
 
 /**
@@ -44,7 +63,12 @@ export const createWedd = async (req: Request, res: Response) => {
 export const replaceWedd = async (req: Request, res: Response) => {
   const weddingId = Number(req.params.weddingId);
   const wedd = await weddService.replaceWedd(weddingId, req.body);
-  respondSuccess(res, 200, null, wedd);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "청첩장 교체 성공",
+    data: wedd,
+  });
 };
 
 /**
@@ -54,7 +78,12 @@ export const updateWeddSection = async (req: Request, res: Response) => {
   const weddingId = Number(req.params.weddingId);
   const sectionId = req.params.sectionId;
   const wedd = await weddService.updateWeddSection(weddingId, sectionId, req.body);
-  respondSuccess(res, 200, null, wedd);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "청첩장 수정 성공",
+    data: wedd,
+  });
 };
 
 /**
@@ -63,7 +92,12 @@ export const updateWeddSection = async (req: Request, res: Response) => {
 export const deleteWedd = async (req: Request, res: Response) => {
   const weddingId = Number(req.params.weddingId);
   await weddService.deleteWedd(weddingId);
-  respondSuccess(res, 200, null, );
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "청첩장 삭제 성공",
+    data: null,
+  });
 };
 
 /**
@@ -72,5 +106,10 @@ export const deleteWedd = async (req: Request, res: Response) => {
 export const updateWeddSectsSet = async (req: Request, res: Response) => {
   const weddingId = Number(req.params.weddingId);
   const wedd = await weddService.updateWeddSectsSet(weddingId, req.body);
-  respondSuccess(res, 200, null, wedd);
+  res.status(200).json({
+    status: 200,
+    error: null,
+    messages: "청첩장 섹션 순서 변경 성공",
+    data: wedd,
+  });
 };
